--- a/cardakwebsite/package.json
+++ b/cardakwebsite/package.json
@@ -7,20 +7,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "node scripts/seed-database.js"
   },
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "next": "15.2.5",
-    "firebase": "^10.8.0",
+    "@supabase/supabase-js": "^2.38.0",
     "@heroicons/react": "^2.1.1",
     "@hookform/resolvers": "^3.3.4",
     "date-fns": "^3.3.1",
     "daisyui": "^4.6.0",
     "react-hook-form": "^7.50.0",
     "zod": "^3.22.4",
-    "zustand": "^4.4.7"
+    "zustand": "^4.4.7",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -41,7 +43,7 @@
   "keywords": [
     "nextjs",
     "react",
-    "firebase",
+    "supabase",
     "tailwindcss",
     "typescript"
   ],
